// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppContainer changes the footer link colors based on isLight prop 1`] = `
@media (min-width: 768px) {
  .emotion-0 {
    height: 100%;
  }
}

.emotion-2 {
  padding: 5rem 0 1rem;
  text-align: center;
  width: 100%;
}

.emotion-6 {
  list-style: none;
  margin: 0 0 1rem;
  padding: 0;
}

.emotion-8 {
  display: inline-block;
  padding: 0 1rem;
}

.emotion-10 {
  color: currentColor;
  -webkit-transition: color 400ms ease-in;
  transition: color 400ms ease-in;
}

<div
  className="emotion-0 emotion-1"
>
  <div />
  <footer
    className="emotion-2 emotion-3"
  >
    <nav
      className="emotion-4 emotion-5"
    >
      <ul
        className="emotion-6 emotion-7"
      >
        <li
          className="emotion-8 emotion-9"
        >
          <a
            className="emotion-10 emotion-11"
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            style={
              Object {
                "color": "#343334",
              }
            }
          >
            Home
          </a>
        </li>
        <li
          className="emotion-8 emotion-9"
        >
          <a
            className="emotion-10 emotion-11"
            href="/palette"
            onClick={[Function]}
            onMouseEnter={[Function]}
            style={
              Object {
                "color": "#343334",
              }
            }
          >
            Palette
          </a>
        </li>
        <li
          className="emotion-8 emotion-9"
        >
          <a
            className="emotion-10 emotion-11"
            href="/api-page"
            onClick={[Function]}
            onMouseEnter={[Function]}
            style={
              Object {
                "color": "#343334",
              }
            }
          >
            API
          </a>
        </li>
        <li
          className="emotion-8 emotion-9"
        >
          <a
            className="emotion-10 emotion-11"
            href="/about"
            onClick={[Function]}
            onMouseEnter={[Function]}
            style={
              Object {
                "color": "#343334",
              }
            }
          >
            About
          </a>
        </li>
      </ul>
    </nav>
  </footer>
</div>
`;

exports[`AppContainer renders without crashing 1`] = `
@media (min-width: 768px) {
  .emotion-0 {
    height: 100%;
  }
}

.emotion-2 {
  padding: 5rem 0 1rem;
  text-align: center;
  width: 100%;
}

.emotion-6 {
  list-style: none;
  margin: 0 0 1rem;
  padding: 0;
}

.emotion-8 {
  display: inline-block;
  padding: 0 1rem;
}

.emotion-10 {
  color: currentColor;
  -webkit-transition: color 400ms ease-in;
  transition: color 400ms ease-in;
}

<div
  className="emotion-0 emotion-1"
>
  <div />
  <footer
    className="emotion-2 emotion-3"
  >
    <nav
      className="emotion-4 emotion-5"
    >
      <ul
        className="emotion-6 emotion-7"
      >
        <li
          className="emotion-8 emotion-9"
        >
          <a
            className="emotion-10 emotion-11"
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            style={
              Object {
                "color": "#fff",
              }
            }
          >
            Home
          </a>
        </li>
        <li
          className="emotion-8 emotion-9"
        >
          <a
            className="emotion-10 emotion-11"
            href="/palette"
            onClick={[Function]}
            onMouseEnter={[Function]}
            style={
              Object {
                "color": "#fff",
              }
            }
          >
            Palette
          </a>
        </li>
        <li
          className="emotion-8 emotion-9"
        >
          <a
            className="emotion-10 emotion-11"
            href="/api-page"
            onClick={[Function]}
            onMouseEnter={[Function]}
            style={
              Object {
                "color": "#fff",
              }
            }
          >
            API
          </a>
        </li>
        <li
          className="emotion-8 emotion-9"
        >
          <a
            className="emotion-10 emotion-11"
            href="/about"
            onClick={[Function]}
            onMouseEnter={[Function]}
            style={
              Object {
                "color": "#fff",
              }
            }
          >
            About
          </a>
        </li>
      </ul>
    </nav>
  </footer>
</div>
`;
